manifests/02-refgrant-backentlspolicy/03-reference-grant-svc-whoami.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-whoami-traffic
  namespace: whoami
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: routes
  to:
  - kind: Service
    group: ""
    name: whoami-tls
